--- a/src/netlify.toml
+++ b/src/netlify.toml
@@ -1,1 +1,7 @@
+[build]
+  command   = "npm run build"
+  publish   = ".next"
+  base      = "src"
 
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
