--- a/src/package.json
+++ b/src/package.json
@@ -7,8 +7,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.2.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+  "next": "14.2.3",
+  "react": "18.2.0",
+  "react-dom": "18.2.0",
+  "@netlify/plugin-nextjs": "^5.3.1"
   }
 }
